<resources>
    <string name="app_name">Zodiac</string>
    <string name="registration">Sign up</string>
    <string name="enter">Sign in</string>
    <string name="enter_errors">Problems with Signing in?</string>
    <string name="enter_google">Login with google account</string>
    <string name="enter_email">Login with Email</string>
    <string name="enter_number">Login with phone number</string>
    <string name="my_number">My number</string>
    <string name="next_btn">Continue</string>
    <string name="my_code">My code</string>
    <string name="my_email">What is your email address</string>

    <string name="my_password">Create your password</string>
    <string name="my_email_hint">Do not lose access to your account, confirm your mail</string>
    <string name="my_password_hint">Protect yourself with a good password</string>
    <string name="register_email_hint">Enter email</string>
    <string name="register_password_hint">Enter password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="my_name">My name</string>
    <string name="my_name_hint">This is how users will contact you</string>
    <string name="register_name_hint">Enter your name</string>
    <string name="my_birthday">My date of birth</string>
    <string name="birthday_hint_dmy">DD/MM/YYYY</string>
    <string name="my_birthday_hint">Your age will be seen by users</string>
    <string name="email_error">Email input Error</string>
    <string name="incorrect_password_error">Incorrect password</string>
    <string name="passwords_dont_match_error">Password mismatch</string>
    <string name="password_symbols_error">Password must be more than 7 characters</string>
    <string name="email_registered_error">This mail is already registered</string>
    <string name="number_registered_error">You did not enter your phone number</string>
    <string name="name_registered_error">Ошибка ввода имени пользователя</string>
    <string name="activate_location">Activate location</string>
    <string name="activate_location_hint">You need to activate the location to use</string>
    <string name="more">More</string>
    <string name="not_now">Not now</string>
    <string name="notifications_button">Enable alerts</string>
    <string name="notifications">Keep me updated</string>
    <string name="notifications_hint">Know when you receive a new pair or alert</string>
    <string name="location_agree">Allow location</string>
    <string name="add_photo">Add photo</string>
    <string name="settings">Settings</string>
    <string name="top_asks">Top offers</string>
    <string name="change_data">Change data</string>
    <string name="gold_advertisement">Go to GOLD to find out who liked you</string>
    <string name="who_likes">Find out who liked you</string>
    <string name="messages_intro">When paired with other users, they appear here, where you can see them</string>
    <string name="messages_start">Start messaging</string>
    <string name="gold_top_ads">Go to GOLD to get more Top Propositions</string>
    <string name="gold_like_ads">Go to GOLD to know who liked you</string>
    <string name="edit">Edit</string>
    <string name="about_text">Write a few words about yourself</string>
    <string name="view">View</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="number">Phone number</string>
    <string name="email">Email address</string>
    <string name="profile_settings">Account settings</string>
    <string name="exit">Exit</string>
    <string name="sign_out">Exit from account</string>
    <string name="max_length">Maximum distance</string>
    <string name="age_radius">Age range</string>
    <string name="phone_number">Phone number</string>
    <string name="accepted_phone_number">Confirmed phone number</string>
    <string name="not_accepted_phone_number">Unconfirmed phone number</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="delete_account">Delete account</string>
    <string name="change_email">Change email address</string>
    <string name="change_password">Change password</string>
    <string name="turn_on_geo">Turn on geo</string>
    <string name="km">km</string>
    <string name="back">Back</string>
    <string name="like">like</string>
    <string name="go_gold">Go to GOLD to see who it is</string>
    <string name="who_liked">Look who liked you</string>
    <string name="later">Later</string>
    <string name="enjoy">Enjoy your use</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="enter_email_password">Enter email and password</string>
    <string name="confirm_authorization">Confirm authorization data</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="exist_mail">This mail is already registered</string>
    <string name="code_error">Code entry error</string>
    <string name="you_have">You have</string>
    <string name="likes">Likes</string>
    <string name="policy_hint">By clicking on the "Create a new user" or "Login" button you agree to
our Terms and Conditions. Learn how we process your data in our Privacy Policy and Cookie Policy</string>
    <string name="name_error">You didn\'t enter name</string>
    <string name="phone_password">Enter your phone and password</string>
    <string name="get_boost">Get Boosts</string>
    <string name="get_likes">Get Likes</string>
    <string name="number_error">Number error</string>
</resources>
