<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationWindows.LikesDialogFragment">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/register_sign_up_button"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/likesPhotoFragment"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BigTextViewStyle"
            android:text="@string/you_have"
            android:textColor="#535353"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BigTextViewStyle"
            android:text="@string/go_gold"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_marginVertical="10dp"
            style="@style/ButtonRegisterStyle"
            android:textColor="@drawable/change_text_color"
            android:background="@drawable/custom_button_next"
            android:id="@+id/whoLikedButton"
            android:text="@string/who_liked"
            />

        <Button

            android:id="@+id/laterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/later"
            android:gravity="center_horizontal"
            android:textColor="@color/gray"
            android:textSize="8pt"
            android:background="@drawable/custom_button_sign_in"
            android:layout_marginHorizontal="30dp"
            />

    </LinearLayout>

</RelativeLayout>