<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.ConfirmCodeActivity"
    android:background="@drawable/registration_background">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:indeterminate="true"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        />


    <TextView

        style="@style/BigTextViewStyle"
        android:id="@+id/myCodeIs"
        android:text="@string/my_code"

        />
    <TextView
        style="@style/HintTextViewStyle"
        android:id="@+id/myCode"
        android:layout_below="@id/myCodeIs"
        android:layout_alignLeft="@id/myCodeIs"
        android:text=""
        />

    <LinearLayout
        android:id="@+id/codeLayout"
        android:layout_below="@id/myCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp" >

        <EditText
            android:id="@+id/verifyCodeEditText"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14pt"
            android:gravity="left"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="5"
            android:layout_marginHorizontal="5dp"
            android:letterSpacing="0.63"
            android:background="@drawable/bottom_stroke_code"/>

    </LinearLayout>

    <TextView
        style="@style/ErrorTextViewStyle"
        android:id="@+id/errorCode"
        android:layout_below="@id/codeLayout"
        android:text="@string/code_error"
        android:visibility="invisible"
        />


    <Button
        style="@style/ButtonRegisterStyle"
        android:textColor="@drawable/change_text_color"
        android:background="@drawable/custom_button_next"
        android:id="@+id/codeNextButton"
        android:text="@string/next_btn"
        android:layout_below="@id/errorCode"
         />

</RelativeLayout>